# NutritionRAG

./: .env.example  ARCHITECTURE_DESIGN.md  CHUNKER_ARCHITECTURE_REDESIGN.md  CHUNKER_REDESIGN_FINAL.md  CHUNK_ROUTER_DESIGN.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  main.py  pyproject.toml
.claude/: settings.local.json
config/: settings.py
scripts/: import_foodb_compounds.py  import_guideline_docs.py  import_openfoodfacts.py  import_relation_rules.py  import_usda_fdc.py  run_evaluation.py  run_indexing.py
src/agent/: __init__.py  answer_node.py  clarify_node.py  confirm_profile_node.py  graph_definition.py  pg_relation_retrieval_node.py  planner_node.py  rerank_node.py  safety_filter_node.py  semantic_retrieval_node.py  state.py  text2sql_node.py
src/api/: agent_api.py  chat_page.py
src/data_ingestion/: __init__.py  normalizer.py  readers.py  schemas.py  writers.py
tests/: test_answer_personalization.py  test_chunkers.py  test_content_classifier_advanced.py  test_conversation_memory.py  test_data_ingestion.py  test_document_router.py  test_evaluation.py  test_graph_routing.py  test_image_classifier.py  test_indexing.py  test_knowledge_memory.py  test_multi_turn.py  test_multi_turn_integration.py  test_pipeline.py  test_planner_guardrails.py  test_profile_memory.py  test_profile_signal.py  test_rerank_user_content.py  test_route_context_nodes.py  test_router_node.py  test_router_node_advanced.py  test_runtime_logger.py  test_semantic_retrieval_node.py  test_text2sql_node.py  test_user_content_api.py  test_user_content_service.py
(+47 files in other folders)
