[project]
name = "nutrition-rag"
version = "0.1.0"
description = "智能膳食与营养助手 - RAG索引管线"
requires-python = ">=3.10"
dependencies = [
    "docling>=2.3.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "pymilvus>=2.4.0",
    "psycopg2-binary>=2.9.9",
    "neo4j>=5.20.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "python-magic-bin>=0.4.14",
    "ragas>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "needs_infra: requires PG / Milvus / LLM API",
    "needs_llm: requires LLM API call",
    "slow: takes more than 5 seconds",
]
